--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <!-- div thứ 1: hình logo -->
              <div style="float:left; width:500px; height:100px; 
              margin:15px 0 0 50px;"> 
-             <img src="images/logoo.jpg" width="500" height="100"/>
+             <img src="images/Nen.jpg"width ="500" height="100"/>
              </div>
              <!-- div thứ 2: giỏ hàng và thông tin giỏ hàng -->
             <div style="float:right; width:400px; height:67px; ">
@@ -42,7 +42,7 @@
             </div>
              <!-- div thứ 3: số điện thoại và tìm kiếm -->
              <div style="float:right; width:400px; height:60px;">
-                <div class="header_phone">Liên hệ:082821234</div>
+                <div class="header_phone">Support: 0828282134</div>
                     <div id="header_search">
                         <!-- Tạo form tìm kiếm-->
                         <form id="search_form">
@@ -56,11 +56,11 @@
             <!-- Phần menu -->
             <div id="menu">
                 <ul>
-                    <li><img  src="images/C.jpg" /></li>
+                    <li><img  src="images/aothunhoatiet.jpg" /></li>
                    <li style="border-left:1px dotted #999"><a href="#">Trang chủ</a></li>
                      <li><a href="#">Giới thiệu</a></li>
-                     <li><a href="#">Thời Trang Nam</a></li>
-                     <li><a href="#">Thời Trang Nữ</a></li>
+                     <li><a href="#">Áo Hoodie</a></li>
+                     <li><a href="#">Áo thun </a></li>
                      <li><a href="#">Hướng dẫn mua hàng</a></li>
                      <li><a href="#">Liên hệ</a></li>
                 </ul>
@@ -70,22 +70,22 @@
                 <div id="main_left"> 
                     <div id="menu_left">
                         <ul>
-                            <li><a href="#">Quần áo nữ</a>
+                            <li><a href="#">Đồ nữ</a>
                                 <ul class="submenu">
                                     <li><a href="#">Áo thun nữ</a>
                                     <li><a href="#">Áo sơ mi nữ</a>
-                                    <li><a href="#">Áo khoát, vest nữ</a>
+                                    <li><a href="#">Hoodie nữ</a>
                                     <li><a href="#">Váy đầm</a>
                                     <li><a href="#">Quần jean</a>
                                 </ul>
                             </li>
-                            <li><a href="#">Giày dép nữ</a>
+                            <li><a href="#">Giày dép</a>
                                 <ul class="submenu">
+                                    <li><a href="#">Giày nam</a>
                                     <li><a href="#">Giày cao gót</a>
-                                    <li><a href="#">Giày búp bê</a>
-                                    <li><a href="#">Giày sandal nữ</a>
-                                    <li><a href="#">Giày bata nữ</a>
-                                    <li><a href="#">Giày thể thao nữ</a>
+                                    <li><a href="#">Giày lười</a>
+                                    <li><a href="#">Giày tây</a>
+                                    <li><a href="#">Giày thể tha0</a>
                                 </ul>
                             </li>
                         </ul>
@@ -98,9 +98,9 @@
                             <li>
                                 <div class="content">
                                    <a href="">
-                                    <img src="images/aohoodie.jpg" alt="" width="210" height="280">
-                                    <p class="title"> Áo khoác nam</p>
-                                    <p class="price">370.000</p>
+                                    <img src="images/Aokhoac1.jpg" alt="" width="210" height="280">
+                                    <p class="title"> Hoodie trắng</p>
+                                    <p class="price">450.000</p>
                                    </a>
 
                                 </div>
@@ -108,17 +108,17 @@
                             <li>
                                 <div class="content">
                                <a href="">
-                                <img src="images/aohoodietrang.jpg" width="210" height="280" />
-                                <p class="title">Áo khoác nam trắng</p>
-                                <p class="price">390.000đ</p>
+                                <img src="images/aothuncomia.jpg" width="210" height="280" />
+                                <p class="title">Áo thun cô mía</p>
+                                <p class="price">250.000đ</p>
                                </a>
                                </div>
                             </li>
                             <li>
                                 <div class="content">
-                               <img src="images/aothuntrang.jpg" width="210" height="280" />
+                               <img src="images/aothune.jpg" width="210" height="280" />
                                 <a href="">
-                                    <p class="title">Áo thun nam</p>
+                                    <p class="title">Áo này thích thì bán</p>
                                 <p class="price">200.000đ</p>
                                 </a>
                                </div>
@@ -126,27 +126,27 @@
                             <li>
                                 <div class="content">
                                <a href="">
-                                <img src="images/aothunden.jpg" width="210" height="280" />
-                                <p class="title">Áo thun nam </p>
-                                <p class="price">200.000đ</p>
+                                <img src="images/aothunxichlo.jpg" width="210" height="280" />
+                                <p class="title">Áo này đạp xích lô bao khách </p>
+                                <p class="price">250.000đ</p>
                                </a>
                                </div>
                             </li>
                             <li>
                                 <div class="content">
                                <a href="">
-                                <img src="images/aothundo.jpg" width="210" height="280" />
-                                <p class="title">Áo thun nam </p>
-                                <p class="price">200.000đ</p>
+                                <img src="images/bangsizeTs.jpg" width="210" height="280" />
+                                <p class="title">Bảng size </p>
+                                <p class="price">Khách coi chọn size</p>
                                </a>
                                </div>
                             </li>
                             <li>
                                 <div class="content">
                                <a href="">
-                                <img src="images/aotayday.jpg" width="210" height="280" />
-                                <p class="title">Áo thun dài tay </p>
-                                <p class="price">270.000đ</p>
+                                <img src="images/aothunwhite.jpg" width="210" height="280" />
+                                <p class="title">Áo chinlike trắng</p>
+                                <p class="price">200.000đ</p>
                                </a>
                                </div>
                             </li>
